--- a/MyShop.WebUI.Tests/MyShop.WebUI.Tests.csproj
+++ b/MyShop.WebUI.Tests/MyShop.WebUI.Tests.csproj
@@ -83,8 +83,11 @@
     <Reference Include="System.Net.Http.WebRequest" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\BasketControllerTests.cs" />
+    <Compile Include="Mocks\MockContext.cs" />
+    <Compile Include="Mocks\MockHttpContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="Controllers\HomeControllerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -93,6 +96,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\MyShop.Core\MyShop.Core.csproj">
+      <Project>{CEEC00DF-43F6-468E-B094-D7F97D0EEA6D}</Project>
+      <Name>MyShop.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MyShop.Services\MyShop.Services.csproj">
+      <Project>{D0F0C44C-8776-4D7A-B7D6-8F63C9B74683}</Project>
+      <Name>MyShop.Services</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MyShop.WebUI\MyShop.WebUI.csproj">
       <Project>{6E8E9CB9-6C4D-443E-A7D8-29D3B8698DCA}</Project>
       <Name>MyShop.WebUI</Name>
